--- a/calc/css/styles.css
+++ b/calc/css/styles.css
@@ -1,55 +1,49 @@
-/* Import Google font - Poppins */
-@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap");
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: "Poppins", sans-serif;
 }
-body {
+#calc {
+  width: 100%;
   height: 100vh;
   display: flex;
-  align-items: center;
   justify-content: center;
-  background: #030303;
+  align-items: center;
 }
-.container {
-  position: relative;
-  max-width: 300px;
-  width: 100%;
-  border-radius: 12px;
-  padding: 10px 20px 20px;
-  background: #e3fc00;
-  box-shadow: 0 5px 10px rgba(0, 0, 0, 0.05);
+#content {
+  background: #2c302c;
+  padding: 20px;
+  border-radius: 10px;
+
 }
-.display {
-  height: 80px;
-  width: 100%;
-  outline: none;
-  border: none;
-  text-align: right;
-  margin-bottom: 10px;
-  font-size: 25px;
-  color: #030303;
-  pointer-events: none;
-}
-.buttons {
-  display: grid;
-  grid-gap: 10px;
-  grid-template-columns: repeat(4, 1fr);
-}
-.buttons button {
-  padding: 10px;
-  border-radius: 6px;
-  border: none;
-  font-size: 20px;
+#content form input {
+  border: 0;
+  outline: 0;
+  width: 50px;
+  height: 50px;
+  border-radius: 8px;
+  font-size: 15px;
+  margin: 10px;
   cursor: pointer;
-  color: #e3fc00;
-  background-color: #080808;
 }
-.buttons button:active {
-  transform: scale(0.99);
+#backspace {
+  background-color: rgb(237, 89, 30);
+  color: white;
 }
-.operator {
-  color: #e3fc00;
+#res {
+  padding: 10px;
+}
+#clear {
+  background-color: rgb(237, 89, 30);
+  color: white;
+}
+form #output {
+  display: flex;
+  justify-content: flex-end;
+  margin: 15px 0;
+}
+form #output input {
+  text-align: right;
+  flex: 1;
+  font-size: 25px;
 }
